@@ -749,88 +749,3 @@ nr_render_r8g8b8_r8g8b8a8 (guchar *px, gint w, gint h, gint rs, const guchar *sr
 	}
 }
 
-#define NR_GARBAGE_SIZE 1024
-
-void
-nr_render_gray_garbage_rgb (guchar *px, gint w, gint h, gint rs)
-{
-	static guchar *garbage = NULL;
-	static guint seed = 0;
-	gint x, y, v;
-
-	g_return_if_fail (px != NULL);
-
-	if (!garbage) {
-		gint i;
-		/* Create grabage buffer */
-		garbage = g_new (guchar, NR_GARBAGE_SIZE);
-		srand (time (NULL));
-		for (i = 0; i < NR_GARBAGE_SIZE; i++) {
-			garbage[i] = (rand () / (RAND_MAX >> 8)) & 0xff;
-		}
-	}
-
-	v = (rand () / (RAND_MAX >> 8)) & 0xff;
-
-	for (y = 0; y < h; y++) {
-		guchar *p;
-		p = px;
-		for (x = 0; x < w; x++) {
-			v = v ^ garbage[seed];
-			*p++ = v;
-			*p++ = v;
-			*p++ = v;
-			seed += 1;
-			if (seed >= NR_GARBAGE_SIZE) {
-				gint i;
-				i = (rand () / (RAND_MAX / NR_GARBAGE_SIZE)) % NR_GARBAGE_SIZE;
-				garbage[i] ^= v;
-				seed = i % (NR_GARBAGE_SIZE >> 2);
-			}
-		}
-		px += rs;
-	}
-}
-
-void
-nr_render_r8g8b8a8_gray_garbage (guchar *px, gint w, gint h, gint rs)
-{
-	static guchar *garbage = NULL;
-	static guint seed = 0;
-	gint x, y, v;
-
-	g_return_if_fail (px != NULL);
-
-	if (!garbage) {
-		gint i;
-		/* Create grabage buffer */
-		garbage = g_new (guchar, NR_GARBAGE_SIZE);
-		srand (time (NULL));
-		for (i = 0; i < NR_GARBAGE_SIZE; i++) {
-			garbage[i] = (rand () / (RAND_MAX >> 8)) & 0xff;
-		}
-	}
-
-	v = (rand () / (RAND_MAX >> 8)) & 0xff;
-
-	for (y = 0; y < h; y++) {
-		guchar *p;
-		p = px;
-		for (x = 0; x < w; x++) {
-			v = v ^ garbage[seed];
-			*p++ = v;
-			*p++ = v;
-			*p++ = v;
-			*p++ = 0xff;
-			seed += 1;
-			if (seed >= NR_GARBAGE_SIZE) {
-				gint i;
-				i = (rand () / (RAND_MAX / NR_GARBAGE_SIZE)) % NR_GARBAGE_SIZE;
-				garbage[i] ^= v;
-				seed = i % (NR_GARBAGE_SIZE >> 2);
-			}
-		}
-		px += rs;
-	}
-}
-
