@@ -18,6 +18,7 @@ libnr_a_SOURCES = \
 	nr-pixblock.c nr-pixblock.h \
 	nr-pixblock-pixel.c nr-pixblock-pixel.h \
 	nr-pixblock-line.c nr-pixblock-line.h \
+	nr-pixblock-pattern.c nr-pixblock-pattern.h \
 	nr-blit.c nr-blit.h \
 	nr-render.h \
 	nr-gradient.c nr-gradient.h \
