@@ -1,3 +1,9 @@
+2002-10-07  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/libnr/nr-pixblock-pattern.h: New file
+
+	* src/libnr/nr-pixblock-pattern.c: New file
+
 2002-10-06  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/toolbox.c (sp_toolbox_draw_create): Do not expand/fill use correct name for text
